[gd_scene load_steps=3 format=3 uid="uid://b8hgax2kqw7lr"]

[ext_resource type="Script" path="res://scripts/ui/GeneratorMenu.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.15, 0.15, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.5, 1)

[node name="GeneratorMenu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)
mouse_filter = 1

[node name="GeneratorPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="GeneratorPanel"]
layout_mode = 2

[node name="TitleBar" type="HBoxContainer" parent="GeneratorPanel/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="GeneratorPanel/VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "HAND CRANK GENERATOR"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="GeneratorPanel/VBoxContainer/TitleBar"]
layout_mode = 2
text = "X"

[node name="MainContainer" type="VBoxContainer" parent="GeneratorPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatusPanel" type="PanelContainer" parent="GeneratorPanel/VBoxContainer/MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatusContainer" type="VBoxContainer" parent="GeneratorPanel/VBoxContainer/MainContainer/StatusPanel"]
layout_mode = 2

[node name="GeneratorIcon" type="TextureRect" parent="GeneratorPanel/VBoxContainer/MainContainer/StatusPanel/StatusContainer"]
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="StatusLabel" type="Label" parent="GeneratorPanel/VBoxContainer/MainContainer/StatusPanel/StatusContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Status: Not Running"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="GeneratorPanel/VBoxContainer/MainContainer/StatusPanel/StatusContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "Remaining Time: 0h 0m"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="GeneratorPanel/VBoxContainer/MainContainer"]
layout_mode = 2

[node name="CrankButton" type="Button" parent="GeneratorPanel/VBoxContainer/MainContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "CRANK (4h)"

[node name="MoveButton" type="Button" parent="GeneratorPanel/VBoxContainer/MainContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "MOVE"

[node name="DestroyButton" type="Button" parent="GeneratorPanel/VBoxContainer/MainContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "DESTROY"

[connection signal="pressed" from="GeneratorPanel/VBoxContainer/TitleBar/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="GeneratorPanel/VBoxContainer/MainContainer/ButtonContainer/CrankButton" to="." method="_on_crank_button_pressed"]
[connection signal="pressed" from="GeneratorPanel/VBoxContainer/MainContainer/ButtonContainer/MoveButton" to="." method="_on_move_button_pressed"]
[connection signal="pressed" from="GeneratorPanel/VBoxContainer/MainContainer/ButtonContainer/DestroyButton" to="." method="_on_destroy_button_pressed"]